@@ -19,3 +19,4 @@ README.html
 *.prof
 *.mprof
 .hg
+build
