@@ -1,0 +1,25 @@
+GETTING STARTED
+===============
+
+Now you can start a server with the following command:
+
+    $ sudo ./build/bin/webrocket-server
+
+...and configure it afterwords:
+
+    $ ./build/bin/webrocket-admin add_vhost /hello
+    $ ./build/bin/webrocket-admin add_channel /hello world
+
+To get started with WebRocket you can include the following code in your HTML file as a base:
+
+    <script src="http://127.0.0.1:8080/webrocket.js"></script>
+    <script>
+        ws = new WebRocket("/test");
+        ws.subscribe("test", function(channel) {
+            // ...
+        });
+    </script>
+
+For further information check out the documentation at 'http://webrocket.io/docs/getting-started'. If you find any problem while using WebRocket then please don't hesitate to inform us by starting an issue at 'http://github.com/webrocket/webrocket/issues' or sending an email to 'issues@webrocket.io'.
+
+See also manual pages for webrocket-server(1) and webrocket-admin(1) to get more information about the possible configurations.
